fix the hbase-env template problem
fix the hbase-env template problem